@@ -189,6 +189,9 @@ Reasoners:
     o Extended rule parser to support typed literals using N3 type syntax 
       such as 'true'^^xsd:byte.
       
+    o Fixed bug with rule sets which include a proprocessing hook to ensure,
+      the hooks are rerun after new triple adds which should invoke the hook.
+      
     o Modified processing of non-monotonic rulesets (involving drop/remove) so
       that each entry in the conflict set is fired separately and all the 
       consquences propagated before attempting to fire the next rule.
